# funny_projects

./: .gitmodules
docs/: atomic.md  decouple.md  rpc.md
docs/career/: cpp.md
lambda/: craft.md
secure_udp/: CMakeLists.txt
secure_udp/core/: CMakeLists.txt  receiver.cpp  receiver.h  sender.cpp  sender.h
secure_udp/crypto/: CMakeLists.txt  aes_gcm.cpp  aes_gcm.h
secure_udp/docs/: design_manual.md
secure_udp_example/: CMakeLists.txt  main.cpp
secure_udp_example/config/: config.h
secure_udp_example/crypto/: aes_gcm.cpp  aes_gcm.h
secure_udp_example/net/: receiver.cpp  receiver.h  sender.cpp  sender.h
